--- a/package.json
+++ b/package.json
@@ -31,9 +31,14 @@
   },
   "homepage": "https://github.com/matiasmicheletto/alkemy-spoonacular-app#readme",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
-    "express-validator": "^6.14.0"
+    "express-validator": "^6.14.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.1.1",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0"
   }
 }
