--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "axios": "^0.25.0",
+    "sweetalert": "^2.1.2"
   }
 }
