--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "react-dom": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-router-dom": "^6.2.1",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "formik": "^2.2.9",
     "axios": "^0.25.0",
     "sweetalert": "^2.1.2"
   }
