--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "alkemy-spoonacular-app",
   "version": "1.0.0",
   "description": "Challenge Alkemy: Una aplicación para crear una carta de opciones de menús para un hotel",
+  "engines": {
+    "node": "17.x",
+    "npm": "8.x"
+  },
   "main": "index.js",
   "directories": {
     "doc": "doc"
